# hextacy

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  out  utils.zsh
alx/: Cargo.toml
alx/src/: config.rs  main.rs
alx/src/analyzer/: analyze.rs  scanners.rs  util.rs
alx/src/boiler/: files.rs  middleware.rs  mod.rs  plate.rs
alx/src/commands/: alx.rs  crypto.rs  envex.rs  generate.rs  migration.rs  mod.rs
alx_clients/: Cargo.toml  README.md
alx_clients/src/: db.rs  email.rs  lib.rs  oauth.rs
alx_clients/src/db/: mod.rs  mongo.rs  postgres.rs
alx_clients/src/oauth/: github.rs  google.rs
alx_core/: Cargo.toml  README.md
alx_core/src/: cache.rs  crypto.rs  db.rs  lib.rs
alx_core/src/crypto/: hmac.rs  mod.rs  utility.rs
alx_core/src/db/: pg.rs  repo.rs
app/: Cargo.toml
app/migrations/2022-10-09-075159_create_users/: up.sql
app/migrations/2022-10-09-080209_create_sessions/: up.sql
app/src/: error.rs  main.rs
app/src/api/: mod.rs
app/src/models/: mod.rs  role.rs  schema.rs  session.rs  user.rs
app/src/repository/: schema.rs
app/src/services/: cache.rs
app/src/state/: mod.rs  reqwest_client.rs
app/src/utility/: request.rs
auth/: Cargo.toml
auth/src/: csrf.rs  lib.rs  otp.rs  user.rs
clients/: Cargo.toml  README.md
clients/src/: lib.rs  postgres.rs  redis.rs
clients/src/db/: postgres.rs  redis.rs
examples/server/: .env.example  Cargo.toml  README.md
examples/server/openssl/: openssl.sh
examples/server/src/: app.rs  cache.rs  config.rs  db.rs  error.rs  main.rs
examples/template/: .env.example  Cargo.toml
examples/template/src/: cache.rs  config.rs  error.rs  main.rs
hextacy/: Cargo.toml  README.md
hextacy/examples/: README.md
hextacy/examples/server/: .env.example  README.md
hextacy/src/: adapters.rs  cache.rs  crypto.rs  db.rs  driver.rs  drivers.rs  env.rs  lib.rs  logger.rs  queue.rs  router.rs  time.rs  web.rs
hextacy/src/adapters/: cache.rs  db.rs  email.rs
hextacy/src/cache/: redis.rs
hextacy/src/clients/: README.md  db.rs  email.rs  mod.rs  oauth.rs
hextacy/src/config/: env.rs
hextacy/src/crypto/: hmac.rs  jwt.rs  otp.rs
hextacy/src/db/: repo.rs
hextacy/src/driver/: db.rs  email.rs
hextacy/src/drivers/: README.md  cache.rs  db.rs  email.rs  mod.rs
hextacy/src/web/: middleware.rs  mod.rs  router.rs  ws.rs  xhttp.rs
hextacy_derive/: Cargo.toml
hextacy_derive/src/: db.rs  lib.rs
hextacy_derive/src/db/: acid_repo.rs  adapter.rs  repository.rs
hextacy_macros/: Cargo.toml
hextacy_macros/src/: component.rs  configuration.rs  lib.rs  response.rs
hextacy_macros/src/configuration/: config.rs  constructor.rs  mod.rs  state.rs
infrastructure/: Cargo.toml
infrastructure/actors/src/: lib.rs  signal.rs
infrastructure/error/: Cargo.toml
infrastructure/error/src/: lib.rs
infrastructure/http/: Cargo.toml
infrastructure/http/src/: cors.rs  lib.rs  security_headers.rs
infrastructure/src/: config.rs  email.rs  lib.rs  validation.rs
infrastructure/src/actors/: broker.rs  mod.rs  tests.rs
infrastructure/src/clients/: email.rs  mod.rs  postgres.rs  redis.rs
infrastructure/src/config/: constants.rs  env.rs  logger.rs  mod.rs
infrastructure/src/crypto/: hmac.rs  jwt.rs  mod.rs  otp.rs  rsa_key_pair.rs  token.rs  utility.rs  utils.rs
infrastructure/src/email/: mod.rs
infrastructure/src/http/: cookie.rs  mod.rs  response.rs  security_headers.rs
infrastructure/src/repository/: mod.rs  session.rs  user.rs
infrastructure/src/services/: email.rs  mod.rs
infrastructure/src/storage/: cache.rs  mod.rs  mongo.rs  postgres.rs  redis.rs
infrastructure/src/utility/: mod.rs
infrastructure/src/web/: mod.rs
infrastructure/src/websocket/: handlers.rs  message.rs  mod.rs  session.rs  signals.rs
infrastructure/storage/: Cargo.toml
infrastructure/storage/src/: redis.rs
infrastructure/websocket/: Cargo.toml
infrastructure/websocket/src/: handlers.rs  lib.rs  session.rs
mycro_actors/: Cargo.toml
mycro_actors/src/: lib.rs
mycro_actors/src/broker/: broker.rs  mod.rs
mycro_actors/src/signals/: broker.rs  mod.rs  system.rs
mycro_core/: Cargo.toml
mycro_core/src/: lib.rs  mycroservice.rs  signal.rs
mycro_core/src/broker/: broker.rs  signals.rs
server/: Cargo.toml
server/src/: config.rs  configure.rs  error.rs  main.rs
server/src/api/: mod.rs
server/src/config/: cache.rs  constants.rs
server/src/helpers/: cache.rs  lazy.rs  mod.rs  request.rs  resources.rs  validation.rs
server/src/services/: cache.rs
storage/: Cargo.toml
storage/src/: cache.rs  lib.rs  mongo.rs  postgres.rs  redis.rs
storage/src/adapters/: mod.rs
storage/src/models/: oauth.rs  session.rs  user.rs
storage/src/repository/: mod.rs  oauth.rs  session.rs  user.rs
tests/: .env.test  Cargo.toml
tests/migrations/2022-09-17-184835_create-table-simple-model-test/: down.sql  up.sql
tests/migrations/2022-09-21-175937_create-table-test-users/: down.sql  up.sql
tests/src/: config.rs  lib.rs  main.rs  schema.rs  storage.rs  storage_t.rs  websocket.rs
tests/src/actors/: broker_test.rs  direct_message_handling.rs  mod.rs
tests/src/auth/: mod.rs  otp.rs
tests/src/mycro_actors/: broker_test.rs  mod.rs
tests/src/mycro_core/: broker_test.rs
tests/src/websocket/: ws_signal.rs
tests/src/ws_service/: mod.rs  ws_signal.rs
utils/: Cargo.toml
utils/src/: env.rs  lib.rs
utils/src/alx/: analyze.rs  config.rs  main.rs
utils/src/cli/: args.rs  config.rs  error.rs  main.rs
ws_service/: Cargo.toml
ws_service/src/: actor.rs  handlers.rs  lib.rs  session.rs  signal.rs  ws_error.rs  ws_signal.rs
ws_service/src/session/: actor.rs  mod.rs  ws_signal.rs
ws_service/src/signals/: mod.rs  raw_json.rs  ws_signal.rs
xtc/: Cargo.toml  README.md
xtc/src/: config.rs  main.rs
xtc/src/analyzer/: analyze.rs  scanners.rs  util.rs
xtc/src/boiler/: middleware.rs  router.rs
xtc/src/commands/: crypto.rs  generate.rs  interactive.rs  migration.rs  route.rs
xtcli/: Cargo.toml  README.md
xtcli/src/: config.rs  error.rs  main.rs
xtcli/src/analyzer/: analyze.rs
(+515 files in other folders)
