[package]
edition = "2021"
name = "alx_core"
version = "0.1.0"

[lib]
name = "alx_core"
path = "src/lib.rs"

[[bin]]
name = "random_password"
path = "src/crypto/bin/random_password.rs"

[[bin]]
name = "rsa_key_pair"
path = "src/crypto/bin/rsa_key_pair.rs"

[[bin]]
name = "generate_secret"
path = "src/crypto/bin/generate_secret.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

# Config and logging

dotenv = "0.15.0"
env_logger = "0.9.1"
log4rs = "1.2.0"
tracing = "0.1.35"
tracing-test = "0.2.3"

# HTTP

actix-cors = "0.6.3"
actix-web = "4"
cookie = { version = "0.16.1", features = ["secure"] }

# Websocket

actix = "0.13.0"
actix-web-actors = "4.1.0"

# Email

lettre = "0.10.1"

# Storage

diesel = { version = "2.0.1", features = [
  "chrono",
  "postgres",
  "r2d2",
  "serde_json",
] }
mongodb = { version = "2.3.1", features = ["tokio-runtime", "tokio-sync"] }
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
uuid = { version = "1.1.2", features = ["v4"] }

# Crypto

bcrypt = "0.13.0"
data-encoding = "2.3.2"
hmac = "0.12.1"
jsonwebtoken = "8.1.1"
rand = "0.8.5"
rsa = { version = "0.6.1", features = ["pem"] }
sha2 = "0.10.6"
thotp = "0.1.11"

# Utility and testing

async-trait = "0.1.42"
clients = { version = "0.1.0", path = "../clients" }
colored = "2.0.0"
lazy_static = "1.4.0"
mockall = "0.11.3"
syn = { version = "1.0.107", features = ["full"] }
thiserror = "1.0.37"
tokio = "1.24.2"
utils = { version = "0.1.0", path = "../utils" }
