[package]
authors = ["biblius <crazycompanyxxl@gmail.com>"]
description = "Consolidates all ALX modules into one library and provides core functionality for backend server development with actix"
edition = "2021"
homepage = "https://github.com/biblius/alchemy"
keywords = ["alchemy", "alx", "alx_core", "backend", "server"]
license = "MIT"
name = "alx_core"
readme = "../README.md"
version = "0.1.0"

[lib]
name = "alx_core"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

# Config and logging

tracing = "0.1.35"
tracing-test = "0.2.3"

# HTTP

actix-web = "4"
cookie = { version = "0.16.1", features = ["secure"] }

# Websocket

actix = "0.13.0"
actix-web-actors = "4.1.0"

# Crypto

bcrypt = "0.13.0"
data-encoding = "2.3.2"
hmac = "0.12.1"
jsonwebtoken = "8.1.1"
rand = "0.8.5"
rsa = { version = "0.6.1", features = ["pem"] }
sha2 = "0.10.6"
thotp = "0.1.11"
uuid = { version = "1.1.2", features = ["v4"] }

# Utility and testing

alx_clients = { version = "0.1.0", path = "../alx_clients", features = [
  "email",
  "mongo",
  "postgres",
  "redis",
] }
async-trait = "0.1.42"
colored = "2.0.0"
lazy_static = "1.4.0"
mockall = "0.11.3"
reqwest = { version = "0.11.14", features = ["json"] }
syn = { version = "1.0.107", features = ["full"] }
thiserror = "1.0.37"
tokio = "1.24.2"
utils = { version = "0.1.0", path = "../utils" }
diesel = "2.0.3"
