[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infrastructure = { path = "../infrastructure" }
validator = "0.16.0"
async-trait = "0.1.42"
actix-web = "4"
tracing = "0.1.35"
chrono = { version = "0.4.22", features = ["serde"] }
thiserror = "1.0.37"
thotp = { version = "0.1.11" }
reqwest = "0.11.12"
serde = { version = "1.0.145", features = ["derive"] }
data-encoding = "2.3.2"
serde_json = "1.0.85"
futures-util = "0.3.24"
diesel = { version = "2.0.1", features = [
  "postgres",
  "chrono",
  "r2d2",
  "serde_json",
] }
