[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
storage = { path = "../storage" }
serde = { version = "1.0.145", features = ["derive"] }
diesel = { version = "2.0.0", features = [
  "serde_json",
  "chrono",
  "postgres",
  "r2d2",
] }
rust-crypto = "0.2.36"
sha-1 = "0.10.0"
rand = { version = "0.8.5", features = ["std_rng"] }
hmac = "0.12.1"
tracing = "0.1.35"
