[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
actix-web = "4"
futures-util = "0.3.24"
thiserror = "1.0.37"
reqwest = "0.11.12"
thotp = { version = "0.1.11" }
storage = { path = "../infrastructure/storage" }
serde = { version = "1.0.145", features = ["derive"] }
diesel = { version = "2.0.0", features = [
  "serde_json",
  "chrono",
  "postgres",
  "r2d2",
] }
sha-1 = "0.10.0"
sha2 = "0.10.6"
rand = { version = "0.8.5", features = ["std_rng"] }
hmac = "0.12.1"
tracing = "0.1.35"
digest = "0.10.5"
