[package]
edition = "2021"
name = "clients"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.1", features = [
  "chrono",
  "postgres",
  "r2d2",
  "serde_json",
] }
lettre = "0.10.2"
mongodb = { version = "2.3.1", features = ["tokio-runtime", "tokio-sync"] }
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
thiserror = "1.0.38"
tracing = "0.1.37"
utils = { version = "0.1.0", path = "../utils" }
uuid = { version = "1.1.2", features = ["v4"] }
