[package]
authors = ["biblius <crazycompanyxxl@gmail.com>"]
description = "Library containing various utilities to aid server development with hexagonal architecture"
edition = "2021"
homepage = "https://github.com/biblius/hextacy"
keywords = ["backend", "hextacy", "hextc", "xtc"]
license = "MIT"
name = "hextacy"
readme = "../README.md"
version = "0.1.2"

[lib]
name = "hextacy"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.42"
dotenv = "0.15.0"
hextacy_macros = { path = "../hextacy_macros" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.37"
tokio = { version = "1.32.0", features = ["macros", "rt"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto
bcrypt = "0.14.0"
data-encoding = "2.3.2"
hmac = "0.12.1"
jsonwebtoken = "8.1.1"
rand = "0.8.5"
rsa = { version = "0.8.2", features = ["pem"] }
sha2 = "0.10.6"
thotp = "0.1.11"
uuid = { version = "1.1.2", features = ["v4"] }

# Logging
env_logger = "0.10.0"
log = "0.4.20"
log4rs = "1.2.0"
tracing = "0.1.37"

# web
actix = { version = "0.13.0", optional = true }
actix-web = { version = "4", optional = true }
actix-web-actors = { version = "4.1.0", optional = true }

# cache-redis, cache-full
deadpool-redis = { version = "0.12.0", features = ["serde"], optional = true }
redis = { version = "0.23.0", features = ["tokio-comp"], optional = true }

# db-full

# db-postgres-seaorm
sea-orm = { version = "0.11.2", features = [
  "macros",
  "runtime-actix-native-tls",
  "sqlx-postgres",
], optional = true }

# db-postgres-diesel
diesel = { version = "2.0.1", features = [
  "chrono",
  "postgres",
  "r2d2",
  "serde_json",
], optional = true }

# db-mongo
mongodb = { version = "2.3.1", features = ["tokio-runtime"], optional = true }

[features]
default = ["full"]
full = ["cache-full", "db-full", "web"]

cache-full = ["cache-inmem", "cache-redis"]

cache-inmem = []
cache-redis = ["dep:deadpool-redis", "dep:redis"]

db-full = ["db-mongo", "db-postgres-diesel", "db-postgres-seaorm"]

db-mongo = ["dep:mongodb"]
db-postgres-diesel = ["dep:diesel"]
db-postgres-seaorm = ["dep:sea-orm"]

web = ["dep:actix", "dep:actix-web", "dep:actix-web-actors"]
