[package]
authors = ["biblius <crazycompanyxxl@gmail.com>"]
description = "Library containing various utilities to aid server development with hexagonal architecture"
edition = "2021"
homepage = "https://github.com/biblius/hextacy"
keywords = ["backend", "hextacy", "hextc", "xtc"]
license = "MIT"
name = "hextacy"
readme = "../README.md"
version = "0.1.2"

[lib]
name = "hextacy"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.42"
data-encoding = { version = "2.3.2" }
dotenv = "0.15.0"
hextacy_macros = { path = "../hextacy_macros" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.37"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto
bcrypt = { version = "0.15.0", optional = true }
hmac = { version = "0.12.1", optional = true }
jsonwebtoken = { version = "8.1.1", optional = true }
rand = { version = "0.8.5", optional = true }
rsa = { version = "0.9.2", features = ["pem"], optional = true }
sha2 = { version = "0.10.6", optional = true }
thotp = { version = "0.1.11", optional = true }
uuid = { version = "1.1.2", features = ["v4"], optional = true }

# Logging
env_logger = "0.10.0"
log = "0.4.20"
log4rs = "1.2.0"
tracing = "0.1.37"

# web
cookie = { version = "0.17.0", features = ["secure"], optional = true }
http = { version = "0.2.9", optional = true }
mime = { version = "0.3.17", optional = true }

# cache-redis, cache-full
deadpool-redis = { version = "0.12.0", features = ["serde"], optional = true }

# db-full

# db-postgres-seaorm
sea-orm = { version = "0.12.2", features = [
  "macros",
  "runtime-actix-native-tls",
  "sqlx-postgres",
], optional = true }

# db-postgres-diesel
diesel = { version = "2.0.1", features = [
  "chrono",
  "postgres",
  "r2d2",
  "serde_json",
], optional = true }

# db-mongo
mongodb = { version = "2.3.1", features = ["tokio-runtime"], optional = true }

# email
lettre = { version = "0.10.4", features = ["pool"], optional = true }


[features]
default = ["full"]
full = ["cache-full", "crypto", "db-full", "email", "web"]

cache-full = ["cache-inmem", "cache-redis"]

cache-inmem = []
cache-redis = ["dep:deadpool-redis"]

db-full = ["db-mongo", "db-postgres-diesel", "db-postgres-seaorm"]

db-mongo = ["dep:mongodb"]
db-postgres-diesel = ["dep:diesel"]
db-postgres-seaorm = ["dep:sea-orm"]

web = ["dep:cookie", "dep:http", "dep:mime"]

email = ["dep:lettre"]

crypto = [
  "dep:bcrypt",
  "dep:hmac",
  "dep:jsonwebtoken",
  "dep:rand",
  "dep:rsa",
  "dep:sha2",
  "dep:thotp",
  "dep:uuid",
]
