[package]
authors = ["biblius <crazycompanyxxl@gmail.com>"]
description = "Library containing derive macros for the hextacy crate"
edition = "2021"
homepage = "https://github.com/biblius/hextacy"
keywords = ["backend", "hextacy", "hextc", "xtc"]
license = "MIT"
name = "hextacy_derive"
readme = "../README.md"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits", "full"] }
