[package]
authors = ["biblius <crazycompanyxxl@gmail.com>"]
description = "Contains procedural macros for the hextacy crate"
edition = "2021"
homepage = "https://github.com/biblius/hextacy"
keywords = ["backend", "hextacy", "hextc", "xtc"]
license = "MIT"
name = "hextacy_macros"
readme = "../README.md"
version = "0.1.1"

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
proc-macro-error = "1"
proc-macro2 = { version = "1.0.66" }
quote = "1"
syn = { version = "2.0.13", features = ["extra-traits", "full"] }
