[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "random_password"
path = "src/crypto/bin/random_password.rs"

[dependencies]
actors = { path = "./actors", optional = true }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
chrono = { version = "0.4", features = ["serde"] }

# Config and logging

dotenv = "0.15.0"
tracing = "0.1.35"

# HTTP

actix-cors = "0.6.3"
actix-web = "4"
cookie = "0.16.1"

# Websocket

actix = "0.13.0"
actix-web-actors = "4.1.0"

# Storage

uuid = { version = "1.1.2", features = ["v4"] }
mongodb = { version = "2.3.1", features = ["tokio-runtime", "tokio-sync"] }
r2d2_redis = "0.14.0"
diesel = { version = "2.0.1", features = [
  "postgres",
  "chrono",
  "r2d2",
  "serde_json",
] }

# Crypto

bcrypt = "0.13.0"
rsa = { version = "0.6.1", features = ["pem"] }
rand = "0.8.5"
jsonwebtoken = "8.1.1"

# Utility and pretty

thiserror = "1.0.37"
colored = "2.0.0"

[features]
default = ["actors"]
actors = ["dep:actors"]
