[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[lib]
name = "infrastructure"
path = "src/lib.rs"

[[bin]]
name = "random_password"
path = "src/crypto/bin/random_password.rs"

[[bin]]
name = "rsa_key_pair"
path = "src/crypto/bin/rsa_key_pair.rs"

[[bin]]
name = "generate_secret"
path = "src/crypto/bin/generate_secret.rs"

[dependencies]
actors = { path = "./actors", optional = true }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
chrono = { version = "0.4", features = ["serde"] }

# Config and logging

dotenv = "0.15.0"
env_logger = "0.9.1"
log4rs = "1.2.0"
tracing = "0.1.35"

# HTTP

actix-cors = "0.6.3"
actix-web = "4"
cookie = { version = "0.16.1", features = ["secure"] }

# Websocket

actix = "0.13.0"
actix-web-actors = "4.1.0"

# Email

lettre = "0.10.1"

# Storage

r2d2 = "0.8.10"
uuid = { version = "1.1.2", features = ["v4"] }
mongodb = { version = "2.3.1", features = ["tokio-runtime", "tokio-sync"] }
r2d2_redis = "0.14.0"
diesel = { version = "2.0.1", features = [
  "postgres",
  "chrono",
  "r2d2",
  "serde_json",
] }

# Crypto

data-encoding = "2.3.2"
bcrypt = "0.13.0"
rsa = { version = "0.6.1", features = ["pem"] }
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.6"
jsonwebtoken = "8.1.1"
thotp = "0.1.11"

# Validation

regex = "1.6.0"

# Utility and pretty

async-trait = "0.1.42"
lazy_static = "1.4.0"
thiserror = "1.0.37"
colored = "2.0.0"

[features]
default = ["actors"]
actors = ["dep:actors"]
