[package]
name = "mycro_actors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
chrono = {version = "0.4", features = ["serde"]}
colored = "2.0.0"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
tracing = "0.1.35"
uuid = {version = "1.1.2", features = ["v4"]}