[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
infrastructure = { path = "../infrastructure" }

# Date and time

chrono = { version = "0.4.22", features = ["serde"] }

# Web

actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
reqwest = "0.11.12"

# Testing

mockall = "0.11.3"
tracing-test = "0.2.3"

# Crypto and data

data-encoding = "2.3.2"
thotp = "0.1.11"
validify = { version = "0.1.0" }

# Utility 

async-trait = "0.1.42"
derive-new = "0.5.9"
diesel = { version = "2.0.1", features = [
  "chrono",
  "postgres",
  "r2d2",
  "serde_json",
] }
futures-util = "0.3.24"
lazy_static = "1.4.0"
logger = { version = "0.1.0", path = "../logger" }
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
storage = { path = "../storage" }
thiserror = "1.0.37"
tokio-cron-scheduler = "0.9.1"
tracing = "0.1.35"
