[package]
name = "storage"
version = "0.1.0"
edition = "2021"
doctest = false

[lib]
path = "src/lib.rs"
name = "storage"
doctest = false

[dependencies]
config = { path = "../config" }
diesel = { version = "2.0.0", features = [
  "serde_json",
  "chrono",
  "postgres",
  "r2d2",
] }
mongodb = { version = "2.3.0", features = ["tokio-runtime", "tokio-sync"] }
redis = { version = "0.21.6", features = ["r2d2"] }
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
tracing = "0.1.35"
