[package]
edition = "2021"
name = "storage"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alx_clients = { version = "0.1.0", path = "../alx_clients", features = [
  "postgres",
  "redis",
] }
async-trait = "0.1.64"
chrono = "0.4.23"
diesel = { version = "2.0.1", features = [
  "chrono",
  "postgres",
  "r2d2",
  "serde_json",
] }
mockall = "0.11.3"
mongodb = { version = "2.3.1", features = ["tokio-runtime", "tokio-sync"] }
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
sea-orm = { version = "0.11.0", features = [
  "runtime-actix-native-tls",
  "sqlx-postgres",
  "with-json",
  "with-time",
] }
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
utils = { path = "../utils" }
uuid = { version = "1.1.2", features = ["v4"] }
