[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test"
path = "src/main.rs"

[dependencies]
infrastructure = { path = "../infrastructure" }
actors = { path = "../infrastructure/actors" }

serde = { version = "1.0.137", features = ["derive"] }
colored = "2.0.0"
env_logger = "0.9.0"
tracing = "0.1.35"
diesel = { version = "2.0.1", features = [
  "postgres",
  "chrono",
  "r2d2",
  "serde_json",
] }
mongodb = { version = "2.3.1", features = ["tokio-runtime", "tokio-sync"] }
