[package]
edition = "2021"
name = "xtc"
version = "0.1.0"

[[bin]]
name = "xtc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
colored = "2.0.0"
crossterm = "0.26.0"
data-encoding = "2.3.3"
dotenv = "0.15.0"
env_logger = "0.9.1"
rand = "0.8.5"
rsa = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9"
syn = { version = "2.0.7", features = ["extra-traits", "full"] }
thiserror = "1.0.37"
tui = "0.19.0"
