[package]
edition = "2021"
name = "xtcli"
version = "0.1.0"

[dependencies]

# Terminal
crossterm = "0.26.0"
clap = { version = "4.0.18", features = ["derive"] }
tui = "0.19.0"
colored = "2.0.0"

data-encoding = "2.3.3"
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["blocking"] }
rsa = "0.8.1"
tar = "0.4.40"
thiserror = "1.0.37"
flate2 = "1.0.27"
