[package]
edition = "2021"
name = "server"
version = "0.1.0"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix-cors = "0.6.3"
actix-web = { version = "4", features = ["openssl"] }
async-trait = "0.1.42"
chrono = { version = "0.4.22", features = ["serde"] }
data-encoding = "2.3.2"
diesel = { version = "2.0.1", features = [
    "chrono",
    "postgres",
    "r2d2",
    "serde_json",
] }
hextacy = { path = "../../hextacy", features = [
    "db-mongo",
    "db-postgres-diesel",
    "db-postgres-seaorm",
    "cache-redis",
] }
lazy_static = "1.4.0"
lettre = { version = "0.10.3" }
memcache = "0.17.0"
mockall = "0.11.3"
mongodb = { version = "2.3.1", features = ["tokio-runtime", "tokio-sync"] }
openssl = { version = "0.10.5", features = ["vendored"] }
regex = "1.6.0"
reqwest = { version = "0.11.14", features = [
    "json",
    "rustls-tls-native-roots",
] }
sea-orm = { version = "0.12.3", features = [
    "macros",
    "runtime-actix-native-tls",
    "sqlx-postgres",
] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.37"
thotp = "0.1.11"
tokio = "1.27.0"
tokio-cron-scheduler = "0.9.1"
tracing = "0.1.35"
tracing-test = "0.2.3"
uuid = { version = "1.3.0", features = ["v4"] }
validify = "1.0.11"
