[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "websocket"
doctest = false

[dependencies]
actors = { path = "../actors" }
actix = "0.13"
actix-web-actors = "4.1.0"
colored = "2.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tracing = "0.1.35"
